--- a/templates/main.templ
+++ b/templates/main.templ
@@ -7,7 +7,7 @@ templ Home () {
 		<head>
     		<meta charset="UTF-8">
     		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    		<title>Document</title>
+    		<title>Ankii</title>
 			<style>
 				body, html {
 					height: 100%;
@@ -106,7 +106,7 @@ templ New () {
 		<head>
     		<meta charset="UTF-8">
     		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    		<title>Document</title>
+    		<title>Ankii</title>
 			<style>
 			body, html {
 					height: 100%;
@@ -230,6 +230,101 @@ templ New () {
 				</section>
 				<div class="button-div">
 					<button id="add-button">+</button>
+				</div>
+			</main>
+		</body>
+	</html>
+}
+templ Deck () {
+	<!DOCTYPE html>
+	<html lang="en">
+		<head>
+    		<meta charset="UTF-8">
+    		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    		<title>Ankii</title>
+			<style>
+				body, html {
+					height: 100%;
+					width: 100%;
+					margin: 0;
+				}
+				main {
+					height: 85%;
+					width:100%
+				}
+				h1 {
+					font-size: 5em;
+				}
+				h2 {
+					font-size: 2.5em;
+					margin: 0;
+				}
+				h3 {
+					font-size: 1.5rem;
+					margin: 0;
+					margin-top: 0.5rem;
+				}
+				.header {
+					height:15%;
+					width: 100%;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+				.center {
+					text-align: center;
+				}
+				.div-name {
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+				}
+				.button {
+					height: 3rem;
+					width: 10.5rem;
+					font-size: 2rem;
+					border: 0;
+					background-color: rgb(0, 136, 255);
+					border-radius: 15px;
+				}
+				.button-div {
+					display:flex;
+					justify-content: center;
+					align-items: center;
+					column-gap: 10rem;
+					margin-top: 4rem;
+				}
+			</style>
+		</head>
+		<body>
+			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
+			<header class="header">
+			<h1 hx-get="/" class="center">Ankii</h1>
+			</header>
+			<main>
+				<div class="div-name">
+					<h2>Title</h2>
+					<h3>Description</h3>
+				</div>
+				<div class="button-div">
+					<button class="button">Bearbeiten</button>
+					<button class="button">Lernen</button>
+					<button class="button">Löschen</button>
+				</div>
+				<div>
+					<div>
+						<h3>Vokabel 1</h3> <h3>Vokabel 2</h3>
+					</div>
+					<div>
+						<h3>Vokabel 3</h3> <h3>Vokabel 4</h3>
+					</div>
+					<div>
+						<h3>Vokabel 5</h3> <h3>Vokabel 6</h3>
+					</div>
+					<div>
+						<h3>Vokabel 7</h3> <h3>Vokabel 8</h3>
+					</div>
 				</div>
 			</main>
 		</body>
