--- a/templates/main.templ
+++ b/templates/main.templ
@@ -148,7 +148,7 @@ templ New () {
 					height: 3rem;
 					width: 10rem;
 					font-size: 2rem;
-					border: 0;
+					border: 1px solid grey;
 					background-color: rgb(0, 136, 255);
 					border-radius: 15px;
 				}
@@ -284,14 +284,16 @@ templ Deck () {
 					height: 3rem;
 					width: 10.5rem;
 					font-size: 2rem;
-					border: 0;
+					border: 1px solid grey;
 					background-color: rgb(0, 136, 255);
 					border-radius: 15px;
+					margin-top: 1rem;
 				}
 				.button-div {
 					display:flex;
 					justify-content: center;
 					align-items: center;
+					flex-wrap: wrap;
 					column-gap: 10rem;
 					margin-top: 4rem;
 				}
@@ -310,6 +312,7 @@ templ Deck () {
 					display: flex;
 					justify-content: space-around;
 					align-items: center;
+					flex-wrap: wrap;
 				}
 				.vocabulary-h {
 					font-size: 1.7rem;
@@ -344,6 +347,127 @@ templ Deck () {
 					<div class="translation">
 						<h3 class="vocabulary-h">Vokabel 7</h3> <h3 class="vocabulary-h">Vokabel 8</h3>
 					</div>
+				</div>
+			</main>
+		</body>
+	</html>
+}
+templ Learn () {
+	<!DOCTYPE html>
+	<html lang="en">
+		<head>
+			<meta charset="UTF-8">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<title>Ankii</title>
+			<style>
+				body, html {
+					height: 100%;
+					width: 100%;
+					margin: 0;
+				}
+				main {
+					height: 85%;
+					width:100%
+				}
+				h1 {
+					font-size: 5em;
+				}
+				h2 {
+					font-size: 2.5em;
+					margin: 0;
+				}
+				h3 {
+					font-size: 1.5rem;
+					margin: 0;
+					margin-top: 0.5rem;
+				}
+				.header {
+					height:15%;
+					width: 100%;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+				.center {
+					text-align: center;
+				}
+				.button-div {
+					display: flex;
+					justify-content: flex-end;
+					align-items: center;
+				}
+				#title-div {
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+				#buttons-div {
+					display:flex;
+					justify-content: center;
+					align-items: center;
+					flex-wrap: wrap;
+					column-gap: 2rem;
+					margin-top: 4rem;
+				}
+				.button {
+					height: 3rem;
+					width: 10.5rem;
+					font-size: 2rem;
+					border: 1px solid grey;
+					background-color: rgb(0, 136, 255);
+					border-radius: 15px;
+					margin-top: 1rem;
+				}
+				#outer-flashcard {
+					width:100%;
+					height: 50%;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+				}
+				#flashcard {
+					height: 100%;
+					width: 50%;
+					margin-top: 3rem;
+					border: 1px solid black;
+					border-radius: 25px;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+				#settings-button {
+					height: 3rem;
+					width: 3rem;
+					font-size: 2rem;
+					border: 1px solid grey;
+					background-color: rgb(0, 136, 255);
+					border-radius: 15px;
+					margin-top: 1rem;
+					margin-right: 1rem;
+				}
+			</style>
+		</head>
+		<body>
+			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
+			<header class="header">
+			<h1 hx-get="/" class="center">Ankii</h1>
+			</header>
+			<main>
+				<div class="button-div">
+					<button id="settings-button">⚙</button>
+				</div>
+				<div id="title-div">
+					<h2>Title</h2>
+				</div>
+				<div id="outer-flashcard">
+					<div id="flashcard">
+						<h2>Vokabel 1</h2>
+					</div>
+				</div>
+				<div id="buttons-div">
+					<button class="button">OK</button>
+					<button class="button">Einfach</button>
+					<button class="button">Nochmal</button>
 				</div>
 			</main>
 		</body>
