Add button functionality and add temppl templates.

--- a/templates/main.templ
+++ b/templates/main.templ
@@ -1,10 +1,36 @@
 package templates
 
- 
+templ header1() {
+	<header class="header">
+		<a href="/"><h1 class="center">Ankii</h1></a>
+	</header>
+}
+templ lernset(title, description string) {
+	<div class="flex-item">
+		<a href="/deck"><h2>{title}</h2></a>
+		<p>{description}</p>
+	</div>
+}
+templ vokabel_input_feld(name1, name2 string) {
+	<div class="vocabulary">
+		<input name={name1} class="input"> 
+			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg>
+		<input name={name2} class="input">
+	</div>
+}
+templ vokabel_anzeige_feld(vokabel1, vokabel2 string) {
+	<div class="translation">
+		<h3 class="vocabulary-h">{vokabel1}</h3>
+			 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg>
+		<h3 class="vocabulary-h">{vokabel2}</h3>
+	</div>
+}
+
 templ Home () {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
+			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
     		<meta charset="UTF-8">
     		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     		<title>Ankii</title>
@@ -65,34 +91,24 @@ templ Home () {
 					justify-content: center;
 					align-items: center;
 				}
+				a {
+					text-decoration: none;
+					color: black;
+				}
 			</style>
 		</head>
 		<body>
 			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
-			<header class="header">
-			<h1 hx-get="/" class="center">Ankii</h1>
-			</header>
+			@header1()
 			<main>
 				<div class="flex-container">
-					<div class="flex-item">
-						<h2>Lernset 1</h2>
-						<p>Das ist das erste Lernset dieser App. </p>
-					</div>
-					<div class="flex-item">
-						<h2>Lernset 2</h2>
-						<p>Das ist das zweite Lernset dieser App. </p>
-					</div>
-					<div class="flex-item">
-						<h2>Lernset 3</h2>
-						<p>Das ist das dritte Lernset dieser App. </p>
-					</div>
-					<div class="flex-item">
-						<h2>Lernset 4</h2>
-						<p>Das ist das vierte Lernset dieser App. </p>
-					</div>
+					@lernset("Lernset 1", "Das ist das erste Lernset dieser App.")
+					@lernset("Lernset 2", "Das ist das zweite Lernset dieser App.")
+					@lernset("Lernset 3", "Das ist das dritte Lernset dieser App.")
+					@lernset("Lernset 4", "Das ist das vierte Lernset dieser App.")
 				</div>
 				<div class="button-div">
-					<button hx-get="/new" id="new-deck">+</button>
+					<a href="/new"><button id="new-deck" >+</button></a>
 				</div>
 			</main>
 			
@@ -104,6 +120,7 @@ templ New () {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
+			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
     		<meta charset="UTF-8">
     		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     		<title>Ankii</title>
@@ -201,32 +218,33 @@ templ New () {
 					height: 4rem;
 					width: 16rem;
 				}
+				a {
+					text-decoration: none;
+					color: black;
+				}
+				form {
+					width: 100%;
+					height: 100%;
+				}
 			</style>
 		</head>
 		<body>
-			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
-			<header class="header">
-			<h1 hx-get="/" class="center">Ankii</h1>
-			</header>
+			@header1()
 			<main>
 				<div class="div-buttons">
-					<button class="button">Verwerfen</button>
-					<button class="button">Erstellen</button>
+					<a href="/"><button class="button">Verwerfen</button></a>
+					<button type="submit" class="button" form="vocab-list">Erstellen</button>
 				</div>
 				<div class="div-name">
 					<h2>Title</h2>
 					<h3>Description</h3>
 				</div>
 				<section class="input-section">
-					<div class="vocabulary">
-						<input class="input"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg> <input class="input">
-					</div>
-					<div class="vocabulary">
-						<input class="input"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg> <input class="input">
-					</div>
-					<div class="vocabulary">
-						<input class="input"> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg> <input class="input">
-					</div>
+					<form hx-post="/create" method="post" id="vocab-list" class="input-section">
+						@vokabel_input_feld("Vokabel1", "Vokabel2")
+						@vokabel_input_feld("Vokabel3", "Vokabel4")
+						@vokabel_input_feld("Vokabel5", "Vokabel6")
+					</form>
 				</section>
 				<div class="button-div">
 					<button id="add-button">+</button>
@@ -239,6 +257,7 @@ templ Deck () {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
+			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
     		<meta charset="UTF-8">
     		<meta name="viewport" content="width=device-width, initial-scale=1.0">
     		<title>Ankii</title>
@@ -323,36 +342,29 @@ templ Deck () {
 					margin-left: 1rem;
 					margin-right: 1rem;
 				}
+				a {
+					text-decoration: none;
+					color: black;
+				}
 			</style>
 		</head>
 		<body>
-			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
-			<header class="header">
-			<h1 hx-get="/" class="center">Ankii</h1>
-			</header>
+			@header1()
 			<main>
 				<div class="div-name">
 					<h2>Title</h2>
 					<h3>Description</h3>
 				</div>
 				<div class="button-div">
-					<button class="button">Bearbeiten</button>
-					<button class="button">Lernen</button>
-					<button class="button">Löschen</button>
+					<a href="/edit"><button class="button">Bearbeiten</button></a>
+					<a href="/learn"><button class="button">Lernen</button></a>
+					<a href="/delete"><button class="button">Löschen</button></a>
 				</div>
 				<div class="vocab">
-					<div class="translation">
-						<h3 class="vocabulary-h">Vokabel 1</h3> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg> <h3 class="vocabulary-h">Vokabel 2</h3>
-					</div>
-					<div class="translation">
-						<h3 class="vocabulary-h">Vokabel 3</h3> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg> <h3 class="vocabulary-h">Vokabel 4</h3>
-					</div>
-					<div class="translation">
-						<h3 class="vocabulary-h">Vokabel 5</h3> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg> <h3 class="vocabulary-h">Vokabel 6</h3>
-					</div>
-					<div class="translation">
-						<h3 class="vocabulary-h">Vokabel 7</h3> <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg> <h3 class="vocabulary-h">Vokabel 8</h3>
-					</div>
+					@vokabel_anzeige_feld("Vokabel1", "Vokabel2")
+					@vokabel_anzeige_feld("Vokabel3", "Vokabel4")
+					@vokabel_anzeige_feld("Vokabel5", "Vokabel6")
+					@vokabel_anzeige_feld("Vokabel7", "Vokabel8")
 				</div>
 			</main>
 		</body>
@@ -362,6 +374,7 @@ templ Learn () {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
+			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
 			<meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<title>Ankii</title>
@@ -450,17 +463,23 @@ templ Learn () {
 					border-radius: 15px;
 					margin-top: 1rem;
 					margin-right: 1rem;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+				}
+				a {
+					text-decoration: none;
+					color: black;
 				}
 			</style>
 		</head>
 		<body>
-			<script src="https://unpkg.com/htmx.org@2.0.2"></script>
-			<header class="header">
-			<h1 hx-get="/" class="center">Ankii</h1>
-			</header>
+			@header1()
 			<main>
 				<div class="button-div">
-					<button id="settings-button">⚙</button>
+					<button id="settings-button">
+						<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M495.9 166.6c3.2 8.7 .5 18.4-6.4 24.6l-43.3 39.4c1.1 8.3 1.7 16.8 1.7 25.4s-.6 17.1-1.7 25.4l43.3 39.4c6.9 6.2 9.6 15.9 6.4 24.6c-4.4 11.9-9.7 23.3-15.8 34.3l-4.7 8.1c-6.6 11-14 21.4-22.1 31.2c-5.9 7.2-15.7 9.6-24.5 6.8l-55.7-17.7c-13.4 10.3-28.2 18.9-44 25.4l-12.5 57.1c-2 9.1-9 16.3-18.2 17.8c-13.8 2.3-28 3.5-42.5 3.5s-28.7-1.2-42.5-3.5c-9.2-1.5-16.2-8.7-18.2-17.8l-12.5-57.1c-15.8-6.5-30.6-15.1-44-25.4L83.1 425.9c-8.8 2.8-18.6 .3-24.5-6.8c-8.1-9.8-15.5-20.2-22.1-31.2l-4.7-8.1c-6.1-11-11.4-22.4-15.8-34.3c-3.2-8.7-.5-18.4 6.4-24.6l43.3-39.4C64.6 273.1 64 264.6 64 256s.6-17.1 1.7-25.4L22.4 191.2c-6.9-6.2-9.6-15.9-6.4-24.6c4.4-11.9 9.7-23.3 15.8-34.3l4.7-8.1c6.6-11 14-21.4 22.1-31.2c5.9-7.2 15.7-9.6 24.5-6.8l55.7 17.7c13.4-10.3 28.2-18.9 44-25.4l12.5-57.1c2-9.1 9-16.3 18.2-17.8C227.3 1.2 241.5 0 256 0s28.7 1.2 42.5 3.5c9.2 1.5 16.2 8.7 18.2 17.8l12.5 57.1c15.8 6.5 30.6 15.1 44 25.4l55.7-17.7c8.8-2.8 18.6-.3 24.5 6.8c8.1 9.8 15.5 20.2 22.1 31.2l4.7 8.1c6.1 11 11.4 22.4 15.8 34.3zM256 336a80 80 0 1 0 0-160 80 80 0 1 0 0 160z"/></svg>
+					</button>
 				</div>
 				<div id="title-div">
 					<h2>Title</h2>
