--- a/templates/main.templ
+++ b/templates/main.templ
@@ -11,11 +11,11 @@ templ lernset(title, description string) {
 		<p>{description}</p>
 	</div>
 }
-templ vokabel_input_feld(name1, name2 string) {
+templ Vokabel_input_feld() {
 	<div class="vocabulary">
-		<input name={name1} class="input"> 
+		<input name="voc1[]" class="input" autocomplete="off" required> 
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free 6.6.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M438.6 150.6c12.5-12.5 12.5-32.8 0-45.3l-96-96c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.7 96 32 96C14.3 96 0 110.3 0 128s14.3 32 32 32l306.7 0-41.4 41.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l96-96zm-333.3 352c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 416 416 416c17.7 0 32-14.3 32-32s-14.3-32-32-32l-306.7 0 41.4-41.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-96 96c-12.5 12.5-12.5 32.8 0 45.3l96 96z"/></svg>
-		<input name={name2} class="input">
+		<input name="voc2[]" class="input" autocomplete="off" required>
 	</div>
 }
 templ vokabel_anzeige_feld(vokabel1, vokabel2 string) {
@@ -226,6 +226,14 @@ templ New () {
 					width: 100%;
 					height: 100%;
 				}
+				#inputs-div {
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					flex-direction: column;
+					row-gap: 2.5rem;
+					flex-wrap: wrap;
+				}
 			</style>
 		</head>
 		<body>
@@ -241,13 +249,13 @@ templ New () {
 				</div>
 				<section class="input-section">
 					<form hx-post="/create" method="post" id="vocab-list" class="input-section">
-						@vokabel_input_feld("Vokabel1", "Vokabel2")
-						@vokabel_input_feld("Vokabel3", "Vokabel4")
-						@vokabel_input_feld("Vokabel5", "Vokabel6")
+						<div id="inputs-div">
+							@Vokabel_input_feld()
+						</div>
 					</form>
 				</section>
 				<div class="button-div">
-					<button id="add-button">+</button>
+					<button hx-post="/new-input" hx-target="#inputs-div" hx-swap="beforeend" id="add-button">+</button>
 				</div>
 			</main>
 		</body>
