Add database structure to also save the date, when a card should be learned. Add functionality to save different Learn_Dates in database depending on which button was clicked.

--- a/templates/main.templ
+++ b/templates/main.templ
@@ -22,7 +22,7 @@ type Deck struct {
 
 templ header1() {
 	<header class="header">
-		<a href="/"><h1 class="center">Ankii</h1></a>
+		<a href="/"><h1 class="center">Anki</h1></a>
 	</header>
 }
 templ lernset(id int, title, description string) {
