--- a/templates/main.templ
+++ b/templates/main.templ
@@ -724,3 +724,74 @@ templ Edit(deck Deck) {
 		</body>
 	</html>
 }
+templ Finished() {
+	<!DOCTYPE html>
+	<html lang="en">
+		<head>
+    		<meta charset="UTF-8">
+    		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    		<title>Anki</title>
+			<style>
+			body, html {
+					height: 100%;
+					width: 100%;
+					margin: 0;
+				}
+				main {
+					height: 85%;
+					width:100%
+				}
+				h1 {
+					font-size: 5em;
+				}
+				h2 {
+					font-size: 2.5em;
+					margin: 0;
+				}
+				h3 {
+					font-size: 1.5rem;
+					margin: 0;
+					margin-top: 0.5rem;
+				}
+				.header {
+					height:15%;
+					width: 100%;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+				.center {
+					text-align: center;
+				}
+				.button {
+					height: 3rem;
+					width: auto;
+					font-size: 2rem;
+					border: 1px solid grey;
+					background-color: rgb(0, 136, 255);
+					border-radius: 15px;
+				}
+				a {
+					text-decoration: none;
+					color: black;
+				}
+				#button-div {
+					width: 100%;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+					margin-top: 4rem;
+				}
+			</style>
+		</head>
+		<body>
+			@header1()
+			<main>
+				<h2 class="center">Du hast alle Vokabeln aus diesem Lernset für heute gelernt. Komm morgenwieder um weiter zu lernen.</h2>
+				<div id="button-div">
+					<a href="/"><button class="button">Zurück zu Homepage</button></a>
+				</div>
+			</main>
+		</body>
+	</html>
+}
